--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.0-beta2",
     "fullpage.js": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "sweetalert2": "^10.15.6"
   }
 }
